# bevy_simple_stat_bars

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: manual_update.rs  observer.rs
src/: bundles.rs  components.rs  despawn.rs  lib.rs  observers.rs
src/render/: mod.rs
