[package]
name = "bevy_simple_stat_bars"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "gamedev", "graphics", "2d", "sprites"]
categories = ["game-development"]
repository = "https://github.com/ickshonpe/bevy_simple_stat_bars"
description = "draw stat bars that follow sprites"

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_render", "bevy_sprite"]

[dev-dependencies.bevy]
version = "0.14"
